# Efficient-VAD

./: README.md  pyproject.toml
eff_vad/: __init__.py  vad_pipeline.py
eff_vad/artifcats/: preprocessor.onnx  vad_ml.onnx
eff_vad/components/: __init__.py  base_component.py  featurizer.py  utils.py  vad.py
tests/: test_vad_pipeline.py
