[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Efficient-VAD"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = ["numpy>=1.22.0", "onnxruntime>=1.11.0"]
description = "An efficient multilingual vocie activity detector."
authors = [
    { name = "Muhammad Abd Al-sattar", email = "muhammadabdalsattar@gmail.com" },
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.setuptools.package-data]
"eff_vad" = ["artifcats/*.onnx"]
